--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ li a:hover {
     height: 350px;
     align-items: center;
     text-align: center;
-    background-color: #007bff;
+    background-color: rgb(37, 58, 248);
     box-shadow: 0px 0px 10px #007bff;
     color: #ffffff;
     clip-path: polygon(5%);
