--- a/style.css
+++ b/style.css
@@ -236,7 +236,8 @@ li a:hover {
     text-align: center;
     margin-top: 20px;
     font-size: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(37, 58, 248);
+    color: white;
     border-style:dashed;
     border-radius: 20px;
     width: 80%;
