--- a/style.css
+++ b/style.css
@@ -340,9 +340,11 @@ footer{
 }
 
 .fichesituation{
-     align-items: center;
+    align-items: center;
     justify-content: center;
     text-align: center;
+    display: flex;
+    margin-top 5%;
 }
 
 .titrefiche{
