--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ li a:hover {
     font-weight: 500;
     font-family: 'Josefin', sans-serif;
     font-weight:bold;
+    color: white;
 }
 
 .competencesprogrammation {
