--- a/style.css
+++ b/style.css
@@ -402,5 +402,6 @@ footer{
     color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
+    font-size: 25px;
 }
 
