--- a/style.css
+++ b/style.css
@@ -347,8 +347,6 @@ footer{
     display: grid;
     grid-template-columns: 150px 150px 150px 150px 150px;
     gap: 10px 2em;
-    width: 100%;
-    align-item: center;
 }
 
 .blockchain:first-child {
@@ -393,7 +391,8 @@ footer{
     height: 130;
     width: 150;
     text-align: center;
-    background-color: #1e1e1e; 
+    background-color: #1e1e1e;
+    margin: 30px 30px 30px 30px;
 }
 
 .nomarticle{
