--- a/style.css
+++ b/style.css
@@ -339,8 +339,8 @@ footer{
     display: flex;
     margin-top:50px;
     margin-bottom:50px;
-    margin-left:50px;
-    margin-right:50px;
+    margin-left:40%;
+    margin-right:30%;
 }
 
 .blockchain{
