--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ footer{
 }
 
 .boutonarticle1{
-    background-image: url(/images/bc1.png);
+    background-image: url(/VictorG/bc1.png);
     height: 100px;
     width: 100px;
     border-radius: 20px;
@@ -362,7 +362,7 @@ footer{
 }
 
 .boutonarticle2{
-    background-image: url(/images/bc2.png);
+    background-image: url(/VictorG/bc2.png);
     height: 100px;
     width: 100px;
     border-radius: 20px;
@@ -370,7 +370,7 @@ footer{
 }
 
 .boutonarticle3{
-    background-image: url(/images/IA1.png);
+    background-image: url(/VictorG/IA1.png);
     height: 100px;
     width: 100px;
     border-radius: 20px;
@@ -378,7 +378,7 @@ footer{
 }
 
 .boutonarticle4{
-    background-image: url(/images/IA2.png);
+    background-image: url(/VictorG/IA2.png);
     height: 100px;
     width: 100px;
     border-radius: 20px;
