--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ footer{
     width: 150;
     text-align: center;
     background-color: #1e1e1e;
+    background-size: 180px 140px;
 }
 
 .nomarticle{
