--- a/style.css
+++ b/style.css
@@ -358,6 +358,9 @@ footer{
     width: 160px;
     border-radius: 20px;
     margin-bottom: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 .boutonarticle2{
@@ -366,6 +369,9 @@ footer{
     width: 160px;
     border-radius: 20px;
     margin-bottom: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 .boutonarticle3{
@@ -374,6 +380,9 @@ footer{
     width: 160px;
     border-radius: 20px;
     margin-bottom: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 .boutonarticle4{
@@ -382,6 +391,9 @@ footer{
     width: 160px;
     border-radius: 20px;
     margin-bottom: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 .article{
